--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="images/activelearning.png" alt="Active Learning icon" loading="lazy" />
             <h3>Active Learning</h3>
             <p>
-              In-home, one-to-one tutoring for primary students in reading, writing, and
+              In-home, one-to-one tutoring for elementary students in reading, writing, and
               mathematics—tailored lessons that make learning engaging and effective.
             </p>
             <a href="services.html#activelearning" class="arrow-link underline" aria-label="Learn more about Active Learning">Learn more →</a>
